--- a/Mvccrudopration/Views/EmpController1/Index.cshtml
+++ b/Mvccrudopration/Views/EmpController1/Index.cshtml
@@ -26,7 +26,7 @@
 <div class="row">
     
    
-    <table class="table">
+    <table class="table" id="mytable">
         <thead>
             <tr>
                 
@@ -35,6 +35,7 @@
                 <th scope="col">Salary</th>
                 <th scope="col">Email</th>
                 <th scope="col"> CheckBox</th>
+                <th scope="col"> Email</th>
             </tr>
         </thead>
         <tbody>
@@ -79,6 +80,27 @@
 
 
 
-@section Scripts {
+@* @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+ *@
+@section Scripts{
+    <link href="https://cdn.datatables.net/v/bs5/dt-2.1.4/af-2.7.0/b-3.1.1/b-html5-3.1.1/b-print-3.1.1/datatables.min.css" rel="stylesheet">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/v/bs5/dt-2.1.4/af-2.7.0/b-3.1.1/b-html5-3.1.1/b-print-3.1.1/datatables.min.js"></script>
+
+
+    <script>
+        $(document).ready(function () {
+            $('#mytable').DataTable({
+                dom: 'Bftip',
+                buttons: [
+                    'copy', 'csv', 'pdf'
+                ]
+            });
+        });
+    </script>
+}
+
