--- a/Mvccrudopration/Views/Product/Index.cshtml
+++ b/Mvccrudopration/Views/Product/Index.cshtml
@@ -1,9 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-@model List<Product>
+﻿@model List<Product>
 <span>@TempData["msg"]</span>
 <partial name="Notification" />
 <a asp-controller="Product" asp-action="AddProduct">
