--- a/Mvccrudopration/Views/Ajax/Index.cshtml
+++ b/Mvccrudopration/Views/Ajax/Index.cshtml
@@ -8,6 +8,21 @@
    Add Emp 
 </button>
 
+<table class="table table-bordered table-hover">
+    <tr>
+
+    <thead class="table-dark">
+        <th>ID</th>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Salary</th>
+    </thead>
+    </tr>
+    <tbody id="tabledata">
+
+    </tbody>
+</table>
+
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -40,7 +55,7 @@
         </div>
     </div>
 </div>
-<input type="button" value="Tesr" id="test"/>
+
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/jquery/dist/jquery.js"></script>
